--- a/portfilio/src/main/resources/application.properties
+++ b/portfilio/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url="jdbc:mysql://localhost:3306/my_portfolio_db"
+spring.datasource.url=jdbc:mysql://localhost:33060/my_portfolio_db
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
