--- a/portfilio/src/main/resources/application.properties
+++ b/portfilio/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:33060/my_portfolio_db
+spring.datasource.url=jdbc:mysql://localhost:3306/my_portfollio_db
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.show-sql=true
